--- a/_notebooks/2020-04-13-taobaoApp-analysis.ipynb
+++ b/_notebooks/2020-04-13-taobaoApp-analysis.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter, taobao, dataanalysis]\n",
+    "- categories: [jupyter, taobao, data_analysis]\n",
     "- author: none"
    ]
   },
